--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,36 +3,47 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/bg_graient"
-                android:paddingBottom="@dimen/activity_vertical_margin"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context=".Login" >
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                tools:context="yan.samux.ikaros.com.savac4k.Register">
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:gravity="center"
-        android:orientation="vertical"
         android:id="@+id/linearLayout">
+
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="40dp"
-            android:text="@string/welcome"
+            android:text="@string/register"
             android:textColor="@color/white"
-            android:textSize="45dp"
-            android:textStyle="bold" />
+            android:textSize="45sp"
+            android:textStyle="bold"/>
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_form_rounded"
-            android:orientation="vertical" >
+            android:orientation="vertical">
+
+            <EditText
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:background="@null"
+                android:hint="@string/na"
+                android:gravity="center"
+                android:padding="5dp"
+                android:singleLine="true"/>
 
             <EditText
                 android:layout_width="fill_parent"
@@ -52,7 +63,8 @@
                 android:hint="@string/password"
                 android:gravity="center"
                 android:inputType="textPassword"
-                android:padding="5dp" />
+                android:padding="5dp"/>
+
         </LinearLayout>
 
         <Button
@@ -63,14 +75,4 @@
             android:text="@string/login"
             android:textColor="@color/white"/>
     </LinearLayout>
-
-    <TextView android:layout_width="fill_parent"
-              android:layout_height="wrap_content"
-              android:text="@string/signup"
-              android:layout_alignParentBottom="true"
-              android:gravity="center_horizontal"
-              android:layout_marginBottom="25dp"
-              android:textColor="@color/white"
-              android:id="@+id/registrar"/>
-
 </RelativeLayout>
