Adicionar NavigationDrawer, arreglarlo

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,12 @@
     <color name="bg_gradient_start">#9DD6D2</color>
     <color name="bg_gradient_end">#CAECF3</color>
     <color name="bg_button_login">#C9B7CB</color>
+
+    <color name="list_item_title">#fff</color>
+    <color name="list_background">#303030</color>
+    <color name="list_background_pressed">#992416</color>
+    <color name="list_divider">#272727</color>
+    <color name="counter_text_bg">#626262</color>
+    <color name="counter_text_color">#c5c4c4</color>
+
 </resources>
