--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -72,7 +72,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:background="@drawable/bg_button_rounded"
-            android:text="@string/login"
-            android:textColor="@color/white"/>
+            android:text="@string/confirm"
+            android:textColor="@color/white"
+            android:id="@+id/send"/>
     </LinearLayout>
 </RelativeLayout>
