--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,7 +61,8 @@
             android:layout_marginTop="25dp"
             android:background="@drawable/bg_button_rounded"
             android:text="@string/login"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            android:id="@+id/login" />
     </LinearLayout>
 
     <TextView android:layout_width="fill_parent"
