Adicionado imagenes a la aplicacion
y inicializacion de los modulos de aprendizaje

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,8 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="yan.samux.ikaros.com.savac4k.fragments.HomeFragment"
-    android:background="#ff1aff10">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context="yan.samux.ikaros.com.savac4k.fragments.HomeFragment"
+                android:background="#9DD6D2">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -10,8 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Home Fragment"
+        android:text="Bienvenido"
         android:id="@+id/textView"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="47dp"/>
 </RelativeLayout>
