--- a/app/src/main/res/layout/list_class_room.xml
+++ b/app/src/main/res/layout/list_class_room.xml
@@ -9,10 +9,11 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
+        android:gravity="center"
         android:id="@+id/classname"
-        android:layout_marginLeft="72dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="32dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
@@ -25,6 +26,6 @@
         android:layout_alignBottom="@+id/classname"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="73dp"
-        android:layout_marginEnd="73dp"/>
+        android:layout_marginRight="57dp"
+        android:layout_marginEnd="57dp"/>
 </RelativeLayout>
