--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context=".Login" >
+                tools:context=".Login">
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -26,13 +26,14 @@
             android:text="@string/welcome"
             android:textColor="@color/white"
             android:textSize="45dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:id="@+id/welcome"/>
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_form_rounded"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <EditText
                 android:layout_width="fill_parent"
@@ -52,7 +53,7 @@
                 android:hint="@string/password"
                 android:gravity="center"
                 android:inputType="textPassword"
-                android:padding="5dp" />
+                android:padding="5dp"/>
         </LinearLayout>
 
         <Button
@@ -62,16 +63,25 @@
             android:background="@drawable/bg_button_rounded"
             android:text="@string/login"
             android:textColor="@color/white"
-            android:id="@+id/login" />
+            android:id="@+id/login"/>
     </LinearLayout>
 
-    <TextView android:layout_width="fill_parent"
-              android:layout_height="wrap_content"
-              android:text="@string/signup"
-              android:layout_alignParentBottom="true"
-              android:gravity="center_horizontal"
-              android:layout_marginBottom="25dp"
-              android:textColor="@color/white"
-              android:id="@+id/registrar"/>
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/signup"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_horizontal"
+        android:layout_marginBottom="25dp"
+        android:textColor="@color/white"
+        android:id="@+id/registrar"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="prueba librerias"
+        android:id="@+id/textView5"
+        android:layout_above="@+id/registrar"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
