--- a/app/src/main/res/menu/menu_prueba_picasso.xml
+++ b/app/src/main/res/menu/menu_prueba_picasso.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context="yan.samux.ikaros.com.savac4k.pruebas.PruebaCards">
+      tools:context="yan.samux.ikaros.com.savac4k.pruebas.PruebaPicasso">
     <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
