se añade los comentarios de los Fragments y el recurso material_greyellow.xml se cambia los nombres de los Recursos

--- a/app/src/main/res/values/material_greyellow.xml
+++ b/app/src/main/res/values/material_greyellow.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#607D8B</color>
-    <color name="primary_dark">#455A64</color>
-    <color name="primary_light">#CFD8DC</color>
-    <color name="accent">#FFEB3B</color>
-    <color name="primary_text">#212121</color>
-    <color name="secondary_text">#727272</color>
-    <color name="icons">#FFFFFF</color>
-    <color name="divider">#B6B6B6</color>
+    <color name="primary2">#607D8B</color>
+    <color name="primary_dark2">#455A64</color>
+    <color name="primary_light2">#CFD8DC</color>
+    <color name="accent2">#FFEB3B</color>
+    <color name="primary_text2">#212121</color>
+    <color name="secondary_text2">#727272</color>
+    <color name="icons2">#FFFFFF</color>
+    <color name="divider2">#B6B6B6</color>
 
 </resources>
