--- a/app/src/main/res/layout/activity_base_prueba.xml
+++ b/app/src/main/res/layout/activity_base_prueba.xml
@@ -24,4 +24,12 @@
         android:id="@+id/pruCards"
         android:layout_below="@+id/pruPicasso"
         android:layout_centerHorizontal="true"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LOOPJ"
+        android:id="@+id/button3"
+        android:layout_below="@+id/pruCards"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
