--- a/app/src/main/res/layout/activity_base_prueba.xml
+++ b/app/src/main/res/layout/activity_base_prueba.xml
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="LOOPJ"
-        android:id="@+id/button3"
+        android:id="@+id/Loop"
         android:layout_below="@+id/pruCards"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
