Se trabaja con Volley para realizar pruebas de HTTPresponse y funcionaron correctamente; ahora se va a trabajar con la Base de Datos en la parte de MER para proseguir con el desarrollo

--- a/app/src/main/res/layout/activity_base_prueba.xml
+++ b/app/src/main/res/layout/activity_base_prueba.xml
@@ -32,4 +32,12 @@
         android:id="@+id/Loop"
         android:layout_below="@+id/pruCards"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Volley"
+        android:id="@+id/VolleyP"
+        android:layout_below="@+id/Loop"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
