--- a/app/src/main/res/layout/activity_c_actions.xml
+++ b/app/src/main/res/layout/activity_c_actions.xml
@@ -20,6 +20,8 @@
         android:layout_width="wrap_content"
         android:layout_height="400dp"
         android:id="@+id/csAcciones"
+        android:divider="@color/divider"
+        android:dividerHeight="1dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
