--- a/app/src/main/res/layout/activity_c_actions.xml
+++ b/app/src/main/res/layout/activity_c_actions.xml
@@ -6,19 +6,10 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="yan.samux.ikaros.com.savac4k.clases.cActions">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Clase de Acciones"
-        android:id="@+id/textView4"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="56dp" />
-
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="400dp"
+        android:paddingTop="30dp"
         android:id="@+id/csAcciones"
         android:divider="@color/divider"
         android:dividerHeight="1dp"
@@ -26,5 +17,18 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:choiceMode="singleChoice" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Clase de Acciones"
+        android:gravity="center_horizontal"
+        android:textAlignment="center"
+        android:id="@+id/textView4"
+        android:layout_marginBottom="20dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="56dp" />
 
 </RelativeLayout>
