se añade los otros modelos de los temas de clases y ya funciona todo el ListView

--- a/app/src/main/res/layout/list_elements.xml
+++ b/app/src/main/res/layout/list_elements.xml
@@ -18,4 +18,13 @@
         android:textSize="@dimen/palabra"
         android:textStyle="bold" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/enChino"
+        android:layout_alignBottom="@+id/thumbnailVolley"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
