--- a/app/src/main/res/layout/activity_c_actions.xml
+++ b/app/src/main/res/layout/activity_c_actions.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Clase de Acciones"
+        android:text="Tema: Acciones"
         android:gravity="center_horizontal"
         android:textAlignment="center"
         android:id="@+id/textView4"
