--- a/app/src/main/res/layout/activity_c_animales.xml
+++ b/app/src/main/res/layout/activity_c_animales.xml
@@ -6,23 +6,29 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="yan.samux.ikaros.com.savac4k.clases.cAnimales">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Clases de Animales"
-        android:id="@+id/textView4"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="56dp" />
-
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="400dp"
+        android:paddingTop="30dp"
         android:id="@+id/csAnimales"
+        android:divider="@color/divider"
+        android:dividerHeight="1dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:choiceMode="singleChoice" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Tema: Animales"
+        android:gravity="center_horizontal"
+        android:textAlignment="center"
+        android:id="@+id/textView4"
+        android:layout_marginBottom="20dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="56dp" />
 
 </RelativeLayout>
